--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,7 @@
     <footer auto-src="./bg-2.png">
         <h3>I'm footer</h3>
     </footer>
-    <script src="./autoRem.js"></script>
+    <script src="./lib/autoRem.js"></script>
     <script>
         var autoRem = new AutoRem()
     </script>
